# Online_grocery_store

./: .dockerignore  .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
authentication/: admin.py  forms.py  managers.py  models.py
cart/: cart.py  tests.py  urls.py
contactsapp/: admin.py  context_processors.py  messages_for_customers.py  tasks.py  tests.py  urls.py  views.py
couponsapp/: admin.py  urls.py
couponsapp/migrations/: 0001_initial.py
ordersapp/: forms.py  models.py
ordersapp/api/: serializers.py
ordersapp/migrations/: 0001_initial.py
pastyshop/: .env.example  celery.py  manage.py  mydata.json  pivfabrucaty_data.json  wsgi.py
pastyshop/authentication/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
pastyshop/cart/: cart.py  forms.py  urls.py  views.py
pastyshop/contactsapp/: admin.py  apps.py  context_processors.py  forms.py  messages_for_customers.py  models.py  tasks.py  tests.py  urls.py  views.py
pastyshop/couponsapp/: admin.py  apps.py  models.py  urls.py  views.py
pastyshop/mainapp/: urls.py  views.py
pastyshop/ordersapp/: admin.py  models.py  tasks.py  urls.py  views.py
pastyshop/pastyshop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pastyshop/paymentapp/: tasks.py  urls.py  views.py  webhooks.py
pastyshop/shop/: admin.py  forms.py  models.py  recommender.py  urls.py  views.py
pastyshop/static/: staticfiles.json
paymentapp/: views.py  webhooks.py
shop/: views.py
static/: staticfiles.json
static/css/: base.0e8dfeefcb3b.css.br  (+4 more)
(+94 files in other folders)
